# klaude

./: .gitignore  .klaude.toml  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backlog/: 001-server-mode.md  002-trace-streaming.md
docs/: 00-project-overview.md  01-how-agentic-loops-work.md  02-tool-calling-explained.md  03-claude-code-features.md  04-qwen3-coder-next.md  05-architecture-decisions.md  06-hardware-guide.md  07-implementation-notes.md  08-claude-code-leak-learnings.md  AGENT-GUIDE.md  INSTALL.md  SERVER.md  SETUP-MODEL.md  TROUBLESHOOTING.md  USAGE.md  feature-request-server-mode.md  feature-request-trace-streaming.md
docs/examples/: full.klaude.toml  local.klaude.toml  mcp-servers.klaude.toml  multi-profile.klaude.toml  remote-openai.klaude.toml
docs/superpowers/plans/: 2026-04-05-atif-trace-writer.md  2026-04-05-server-mode.md  2026-04-19-read-document.md
docs/superpowers/specs/: 2026-04-05-atif-trace-design.md  2026-04-05-cicd-pipeline-design.md  2026-04-05-nam-website-atif-changes.md  2026-04-05-server-mode-design.md  2026-04-19-read-document-design.md
scripts/: setup-model.sh
src/klaude/: __init__.py  cli.py  client.py  compaction.py  config.py  context.py  cron.py  loop.py  mcp.py  memory.py  permissions.py  prompt.py  render.py  repl.py  skills.py  stream.py  team.py
src/klaude/core/: client.py  compaction.py  context.py  history.py  loop.py  prompt.py  session_store.py  stream.py  tool_call_parser.py  trace.py
src/klaude/extensions/: cron.py  hooks.py  mcp.py  plugins.py  skills.py  team.py
src/klaude/tools/: __init__.py  _document.py  ask_user.py  background_task.py  bash.py  edit_file.py  git.py  glob_search.py  grep_search.py  list_directory.py  lsp.py  notebook_edit.py  read_document.py  read_file.py  registry.py  sub_agent.py  team.py  (+5 more)
tests/: conftest.py  test_cli_flags.py  test_document_extract.py  test_json_mode.py  test_read_document_tool.py  test_read_file_dispatch.py  test_session_quiet.py  test_session_store.py  test_status_bar.py  test_stream_quiet.py  test_trace.py  test_trace_integration.py  test_vision_config.py
tests/fixtures/: __init__.py
(+4 files in other folders)
