[project]
name = "klaude"
version = "0.1.0"
description = "DIY Claude Code harness powered by open-source LLMs"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "mcp>=1.0.0",
]

[project.scripts]
klaude = "klaude.ui.cli:main"

[project.urls]
Repository = "https://github.com/nam685/klaude"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klaude"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
