[project]
name = "klaude"
dynamic = ["version"]
description = "DIY Claude Code harness powered by open-source LLMs"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.31.0",
    "rich>=15.0.0",
    "click>=8.3.2",
    "mcp>=1.27.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]

[project.scripts]
klaude = "klaude.ui.cli:main"

[project.urls]
Repository = "https://github.com/nam685/klaude"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/klaude/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/klaude"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
